# WindowCapture

./: CMakeLists.txt  README.md  build.bat  build.sh
include/: Source.hpp  Utillity.hpp  WindowManager.hpp  WindowStream.hpp
src/: Source.cpp  Utillity.cpp  WindowStream.cpp
